--- a/hinnasto.html
+++ b/hinnasto.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat Mar 30 2024 10:53:51 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Apr 14 2024 13:32:15 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65a683dc387d6f72ded606e3" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -65,7 +65,7 @@
             </a>
           </div>
           <div class="nav-wrapper _3">
-            <a href="referenssit" class="navlinks w-inline-block">
+            <a href="https://www.nords.fi/#Referenssit" class="navlinks w-inline-block">
               <div class="nav-text">Referenssit</div>
               <div class="nav-text text-shadow">Referenssit</div>
             </a>
@@ -88,6 +88,9 @@
             <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a026907" href="https://www.youtube.com/@nords." target="_blank" class="social-icon w-inline-block"><img src="images/youtube.svg" loading="lazy" width="20" alt="Youtube" class="animation-image _3">
               <div class="social-circle twitter"></div>
             </a>
+            <a data-w-id="f7a4cc83-0293-c6ee-c656-6f89860e195f" href="https://wa.me/358449819623" target="_blank" class="social-icon w-inline-block"><img src="images/whatsapp_1.svg" loading="lazy" width="20" alt="Youtube" class="animation-image _3">
+              <div class="social-circle whatsapp"></div>
+            </a>
           </div>
           <div class="location-wrapper"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44afca597a6f8_gps_fixed_white_24dp.svg" loading="lazy" width="14" alt="" class="location">
             <p class="top-text _2">Tampere, Finland</p>
@@ -105,7 +108,7 @@
           </div>
           <div id="w-node-_62d2a689-3014-4d03-e5fd-5a2792f98152-ded606e3" class="part-1">
             <div class="hero-flex-center left">
-              <p style="-webkit-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-20deg, 0);-moz-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-20deg, 0);-ms-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-20deg, 0);transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-20deg, 0);opacity:0" class="paragraph-1 second">Autamme mielellämme mahtavia asiakkaitamme heidän upeissa projekteissaan.<br></p>
+              <p style="-webkit-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-20deg, 0);-moz-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-20deg, 0);-ms-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-20deg, 0);transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-20deg, 0);opacity:0" class="paragraph-1 second">Autamme mielellämme mahtavia asiakkaitamme heidän upeissa projekteissaan.<br><br>Tutustu läpinäkyvään hinnastoomme!<br></p>
               <div class="margin-40px">
                 <div style="-webkit-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-30deg, 0);-moz-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-30deg, 0);-ms-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-30deg, 0);transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-30deg, 0);opacity:0" class="button-interaction">
                   <a href="#scroll" class="button w-button">Lue lisää</a>
@@ -127,22 +130,25 @@
           <div data-w-id="15c45ca9-e70f-feb7-edf2-c68d38fe80ec" class="w-layout-grid grid-2">
             <div id="w-node-_15c45ca9-e70f-feb7-edf2-c68d38fe80ed-38fe80eb" class="card-container">
               <a href="#" class="pricing-icon services w-inline-block">
-                <div class="pricing-circle"></div><img src="images/logot.svg" loading="lazy" alt="Harmaa ikoni, jossa kirjaimet NDM selaimen sisällä." class="pricing-image">
+                <div class="pricing-circle"></div><img src="images/Icon-01.png" loading="lazy" sizes="(max-width: 1279px) 40px, (max-width: 1439px) 3vw, 40px" srcset="images/Icon-01-p-500.png 500w, images/Icon-01-p-800.png 800w, images/Icon-01-p-1080.png 1080w, images/Icon-01-p-1600.png 1600w, images/Icon-01-p-2000.png 2000w, images/Icon-01-p-2600.png 2600w, images/Icon-01-p-3200.png 3200w, images/Icon-01.png 4402w" alt="" class="pricing-image">
               </a><img src="https://uploads-ssl.webflow.com/638cce601f96abee0a5facb7/6390b58b5c0b4ab5a5c7623c_simple_logo_icon-cropped.svg" loading="lazy" alt="" class="service-title">
-              <h3 class="pricing-type">Logon suunnittelu</h3>
-              <div class="pricing-title no-margin">€ 199.00 <span class="alv">+ alv. 24%<br></span></div>
+              <h3 class="pricing-type">One Pager -kotisivut</h3>
+              <div class="pricing-title no-margin">€ 299.00 <span class="alv">+ alv. 24%<br></span></div>
               <div class="pricing-features">
                 <div class="pricing-feature"><img src="images/checkmark.svg" loading="lazy" alt="Harmaa valintamerkki." class="check-mark">
-                  <div class="feature">Logon suunnittelu</div>
+                  <div class="feature">2-4 osiota sisältävä yksinkertainen kotisivu</div>
                 </div>
                 <div class="pricing-feature"><img src="images/checkmark.svg" loading="lazy" alt="Harmaa valintamerkki." class="check-mark">
-                  <div class="feature">Kaikki tiedostomuodot (jpg. png. pdf. vector. source.) </div>
+                  <div class="feature">Hakukoneoptimointi</div>
                 </div>
                 <div class="pricing-feature"><img src="images/checkmark.svg" loading="lazy" alt="Harmaa valintamerkki." class="check-mark">
-                  <div class="feature">Optimoidut tiedostot kaikille taustoille</div>
+                  <div class="feature">Nopea latausaika</div>
                 </div>
                 <div class="pricing-feature"><img src="images/checkmark.svg" loading="lazy" alt="Harmaa valintamerkki." class="check-mark">
-                  <div class="feature">Laadukkaat suunnittelutyökalut</div>
+                  <div class="feature">Ilmainen SSL-sertifikaatti</div>
+                </div>
+                <div class="pricing-feature"><img src="images/checkmark.svg" loading="lazy" alt="Harmaa valintamerkki." class="check-mark">
+                  <div class="feature">Ei piilokuluja</div>
                 </div>
                 <div class="pricing-feature"><img src="images/checkmark.svg" loading="lazy" alt="Harmaa valintamerkki." class="check-mark">
                   <div class="feature">Täysi omistusoikeus</div>
@@ -152,31 +158,31 @@
                 </div>
               </div>
               <div class="default-state">
-                <a href="https://logo.nords.fi/" target="_blank" class="button w-button">Tutustu referensseihin</a>
-                <a href="ota-yhteytta" class="button w-button">Ota yhteyttä</a>
+                <a href="ota-yhteytta" class="button w-button">Kysy lisätietoa</a>
+                <a href="kotisivut-kysely" class="button w-button">Tilaa!</a>
               </div>
             </div>
             <div id="w-node-_15c45ca9-e70f-feb7-edf2-c68d38fe8117-38fe80eb" class="card-container">
               <a href="#" class="pricing-icon services w-inline-block">
-                <div class="pricing-circle"></div><img src="images/kotisivu.svg" loading="lazy" alt="Harmaa ikoni, jossa tekstiä ja NDM selaimen sisällä." class="pricing-image">
+                <div class="pricing-circle"></div><img src="images/Icon-02.png" loading="lazy" sizes="(max-width: 1279px) 40px, (max-width: 1439px) 3vw, 40px" srcset="images/Icon-02-p-500.png 500w, images/Icon-02-p-800.png 800w, images/Icon-02-p-1080.png 1080w, images/Icon-02-p-1600.png 1600w, images/Icon-02-p-2000.png 2000w, images/Icon-02-p-2600.png 2600w, images/Icon-02-p-3200.png 3200w, images/Icon-02.png 4402w" alt="" class="pricing-image">
               </a>
-              <h3 class="pricing-type">Kotisivujen kehitys</h3><img src="https://uploads-ssl.webflow.com/638cce601f96abee0a5facb7/6390bb6499e2d11391d1ec82_all_in_icon-cropped.svg" loading="lazy" alt="" class="service-title fixed">
+              <h3 class="pricing-type">Pro -kotisivut</h3><img src="https://uploads-ssl.webflow.com/638cce601f96abee0a5facb7/6390bb6499e2d11391d1ec82_all_in_icon-cropped.svg" loading="lazy" alt="" class="service-title fixed">
               <div class="pricing-title no-margin">€ 499.00 <span class="alv">+ alv. 24%</span></div>
               <div class="pricing-features">
                 <div class="pricing-feature"><img src="images/checkmark.svg" loading="lazy" alt="Harmaa valintamerkki." class="check-mark">
                   <div class="feature">Kotisivut tarpeidesi mukaan</div>
                 </div>
                 <div class="pricing-feature"><img src="images/checkmark.svg" loading="lazy" alt="Harmaa valintamerkki." class="check-mark">
-                  <div class="feature">Hakukoneystävälliset sivut</div>
+                  <div class="feature">Hakukoneoptimointi</div>
+                </div>
+                <div class="pricing-feature"><img src="images/checkmark.svg" loading="lazy" alt="Harmaa valintamerkki." class="check-mark">
+                  <div class="feature">Nopea latausaika</div>
                 </div>
                 <div class="pricing-feature"><img src="images/checkmark.svg" loading="lazy" alt="Harmaa valintamerkki." class="check-mark">
                   <div class="feature">Ilmainen SSL-sertifikaatti</div>
                 </div>
                 <div class="pricing-feature"><img src="images/checkmark.svg" loading="lazy" alt="Harmaa valintamerkki." class="check-mark">
-                  <div class="feature">UX/käyttökokemus optimointi</div>
-                </div>
-                <div class="pricing-feature"><img src="images/checkmark.svg" loading="lazy" alt="Harmaa valintamerkki." class="check-mark">
-                  <div class="feature">Läpinäkyvä hinnoittelu ilman piilokuluja</div>
+                  <div class="feature">Ei piilokuluja</div>
                 </div>
                 <div class="pricing-feature"><img src="images/checkmark.svg" loading="lazy" alt="Harmaa valintamerkki." class="check-mark">
                   <div class="feature">Täysi omistusoikeus</div>
@@ -186,42 +192,46 @@
                 </div>
               </div>
               <div class="default-state">
-                <a href="referenssit" class="button w-button">Tutustu referensseihin</a>
-                <a href="ota-yhteytta" class="button w-button">Ota yhteyttä</a>
+                <div class="default-state">
+                  <a href="ota-yhteytta" class="button w-button">Kysy lisätietoa</a>
+                  <a href="kotisivut-kysely" class="button w-button">Tilaa!</a>
+                </div>
               </div>
             </div>
             <div id="w-node-_15c45ca9-e70f-feb7-edf2-c68d38fe8144-38fe80eb" class="card-container">
               <a href="#" class="pricing-icon services w-inline-block">
-                <div class="pricing-circle"></div><img src="images/logosivut.svg" loading="lazy" alt="" class="pricing-image">
+                <div class="pricing-circle"></div><img src="images/Icon-03.png" loading="lazy" sizes="(max-width: 1279px) 40px, (max-width: 1439px) 3vw, 40px" srcset="images/Icon-03-p-500.png 500w, images/Icon-03-p-800.png 800w, images/Icon-03-p-1080.png 1080w, images/Icon-03-p-1600.png 1600w, images/Icon-03-p-2000.png 2000w, images/Icon-03-p-2600.png 2600w, images/Icon-03-p-3200.png 3200w, images/Icon-03.png 4402w" alt="" class="pricing-image">
               </a>
-              <h3 class="pricing-type">Logo + kotisivut</h3><img src="https://uploads-ssl.webflow.com/638cce601f96abee0a5facb7/6390bb2281ed7f01a39de227_all_in_logo-cropped.svg" loading="lazy" alt="" class="service-title">
+              <h3 class="pricing-type">Logo + Pro -kotisivut</h3><img src="https://uploads-ssl.webflow.com/638cce601f96abee0a5facb7/6390bb2281ed7f01a39de227_all_in_logo-cropped.svg" loading="lazy" alt="" class="service-title">
               <div class="pricing-title no-margin">€ 599.00 <span class="alv">+ alv. 24%</span></div>
               <div class="pricing-features">
+                <div class="pricing-feature"><img src="images/checkmark.svg" loading="lazy" alt="Harmaa valintamerkki." class="check-mark">
+                  <div class="feature">Kaikki mitä kuuluu Pro -kotisivuihin</div>
+                </div>
                 <div class="pricing-feature"><img src="images/checkmark.svg" loading="lazy" alt="Harmaa valintamerkki." class="check-mark">
                   <div class="feature">Logon suunnittelu</div>
                 </div>
                 <div class="pricing-feature"><img src="images/checkmark.svg" loading="lazy" alt="Harmaa valintamerkki." class="check-mark">
-                  <div class="feature">Kaikki tiedostomuodot (jpg. png. pdf. vector. source.) </div>
+                  <div class="feature">Kaikki tiedostomuodot <span class="span-small">(jpg. png. pdf. vector. source.) </span></div>
                 </div>
                 <div class="pricing-feature"><img src="images/checkmark.svg" loading="lazy" alt="Harmaa valintamerkki." class="check-mark">
-                  <div class="feature">Optimoidut tiedostot</div>
+                  <div class="feature">Iteratiivinen suunnittelu</div>
                 </div>
                 <div class="pricing-feature"><img src="images/checkmark.svg" loading="lazy" alt="Harmaa valintamerkki." class="check-mark">
-                  <div class="feature">Kotisivut tarpeidesi mukaan</div>
+                  <div class="feature">Ei piilokuluja</div>
                 </div>
                 <div class="pricing-feature"><img src="images/checkmark.svg" loading="lazy" alt="Harmaa valintamerkki." class="check-mark">
-                  <div class="feature">Hakukoneystävälliset sivut</div>
-                </div>
-                <div class="pricing-feature"><img src="images/checkmark.svg" loading="lazy" alt="Harmaa valintamerkki." class="check-mark">
-                  <div class="feature">UX/käyttökokemus optimointi</div>
+                  <div class="feature">Täysi omistusoikeus</div>
                 </div>
                 <div class="pricing-feature"><img src="images/checkmark.svg" loading="lazy" alt="Harmaa valintamerkki." class="check-mark">
                   <div class="feature">Tyytyväisyystakuu</div>
                 </div>
               </div>
               <div class="default-state">
-                <a href="referenssit" class="button w-button">Tutustu referensseihin</a>
-                <a href="ota-yhteytta" class="button w-button">Ota yhteyttä</a>
+                <div class="default-state">
+                  <a href="ota-yhteytta" class="button w-button">Kysy lisätietoa</a>
+                  <a href="kotisivut-kysely" class="button w-button">Tilaa!</a>
+                </div>
               </div>
             </div>
           </div>
@@ -245,7 +255,7 @@
                 </a>
                 <div style="height:0PX" class="toggle-content">
                   <div style="-webkit-transform:translate3d(0, 5PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 5PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 5PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 5PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="toggle-space">
-                    <p class="faq-paragraph">Aikataulu vaihtelee projektin laajuuden ja asiakkaan vaatimusten mukaan. Pyrimme kuitenkin työskentelemään tehokkaasti ja suorittamaan projektit mahdollisimman nopeasti. Kun olemme sopineet projektin yksityiskohdista, voimme antaa sinulle arvion siitä, kuinka kauan projekti kestää.<br></p>
+                    <p class="faq-paragraph">Aikataulu vaihtelee projektin laajuuden ja asiakkaan vaatimusten mukaan. Pyrimme kuitenkin työskentelemään tehokkaasti ja suorittamaan projektit mahdollisimman nopeasti. Kun olemme sopineet projektin yksityiskohdista, voimme antaa sinulle arvion siitä, kuinka kauan projekti kestää.<br><br>Kiireellisissä tarpeissa voimme toimia hyvinkin nopeasti.<br></p>
                   </div>
                 </div>
               </div>
@@ -302,7 +312,7 @@
           <div class="top-divider">
             <div class="category-tag _2">Ole meihin yhteydessä!<br></div>
           </div>
-          <h3 class="display-1 larger">Olemme valmiina hommiin!<strong><br></strong></h3>
+          <h3 class="display-1 larger footer-cta">Olemme valmiina hommiin!<strong><br></strong></h3>
           <div class="margin-40px">
             <p class="subhead">Luodaan jotain ainutlaatuista.</p>
           </div>
@@ -324,14 +334,14 @@
           <div class="footer-grid">
             <div id="w-node-_063a8163-44a6-b9f6-d883-e512f17c4996-f17c497c"><img src="images/ndm-cropped.png" loading="lazy" width="70" sizes="(max-width: 479px) 100vw, 140px" alt="Kirjaimet NDM ja nimi Nords Digital Media sen vieressä." srcset="images/ndm-cropped-p-500.png 500w, images/ndm-cropped-p-800.png 800w, images/ndm-cropped-p-1080.png 1080w, images/ndm-cropped-p-1600.png 1600w, images/ndm-cropped-p-2000.png 2000w, images/ndm-cropped-p-2600.png 2600w, images/ndm-cropped-p-3200.png 3200w" class="logo-footer">
               <div class="margin-30px">
-                <p class="paragraph-footer">Visioi. Luo. Saavuta.</p>
+                <p class="paragraph-footer">Visioi. Luo. <em>Saavuta</em>.</p>
               </div>
               <div class="margin-30px">
                 <div class="navigation-flex">
                   <a href="https://www.nords.fi" class="footer-link bigger">Etusivu</a>
                   <a href="palvelut" class="footer-link bigger">Palvelut</a>
                   <a href="hinnasto" aria-current="page" class="footer-link bigger w--current">Hinnasto</a>
-                  <a href="referenssit" class="footer-link bigger">Referenssit</a>
+                  <a href="https://www.nords.fi/#Referenssit" class="footer-link bigger">Referenssit</a>
                   <a href="ota-yhteytta" class="footer-link bigger">Ota yhteyttä</a>
                 </div>
               </div>
@@ -347,6 +357,9 @@
                   </a>
                   <a data-w-id="063a8163-44a6-b9f6-d883-e512f17c49b6" href="https://www.youtube.com/@nords." target="_blank" class="social-icon w-inline-block"><img src="images/youtube.svg" loading="lazy" width="20" alt="Youtube" class="animation-image _3">
                     <div class="social-circle twitter"></div>
+                  </a>
+                  <a data-w-id="6cb35788-66f4-8f8f-bb6e-0c71dd961dd5" href="https://wa.me/358449819623" target="_blank" class="social-icon w-inline-block"><img src="images/whatsapp_1.svg" loading="lazy" width="20" alt="" class="animation-image _3">
+                    <div class="social-circle whatsapp"></div>
                   </a>
                 </div>
               </div>
