--- a/kotisivut-kysely.html
+++ b/kotisivut-kysely.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat Mar 30 2024 10:53:51 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Apr 14 2024 13:32:15 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65a683dc387d6f72ded60716" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -103,7 +103,7 @@
           <div class="footer-grid">
             <div id="w-node-b300c202-e834-e7c0-ab87-00d3048b284d-048b2848"><img src="images/ndm-cropped.png" loading="lazy" width="70" sizes="(max-width: 479px) 100vw, 140px" alt="" srcset="images/ndm-cropped-p-500.png 500w, images/ndm-cropped-p-800.png 800w, images/ndm-cropped-p-1080.png 1080w, images/ndm-cropped-p-1600.png 1600w, images/ndm-cropped-p-2000.png 2000w, images/ndm-cropped-p-2600.png 2600w, images/ndm-cropped-p-3200.png 3200w" class="logo-footer">
               <div class="margin-30px">
-                <p>Nords Oy on suomalainen brändäys ja digitoimisto sitoutunut tuottamaan vain ja ainoastaan markkinoiden huippu laatua.<br></p>
+                <p>Visioi. Luo. <em>Saavuta</em>.<br></p>
               </div>
               <div class="margin-30px">
                 <div class="navigation-flex">
@@ -127,8 +127,8 @@
                   <a data-w-id="b300c202-e834-e7c0-ab87-00d3048b2866" href="https://www.youtube.com/@nords." target="_blank" class="social-icon w-inline-block"><img src="images/youtube.svg" loading="lazy" width="20" alt="" class="animation-image _3">
                     <div class="social-circle twitter"></div>
                   </a>
-                  <a data-w-id="b300c202-e834-e7c0-ab87-00d3048b2869" href="https://github.com/nordsoy" target="_blank" class="social-icon w-inline-block"><img src="images/298822_github_mark_icon.svg" loading="lazy" width="20" alt="" class="animation-image _3">
-                    <div class="social-circle dribble"></div>
+                  <a href="https://wa.me/358449819623" target="_blank" class="social-icon w-inline-block"><img src="images/whatsapp_1.svg" loading="lazy" width="20" alt="" class="animation-image _3">
+                    <div class="social-circle whatsapp"></div>
                   </a>
                 </div>
               </div>
@@ -144,7 +144,7 @@
               </div>
             </div>
             <div id="w-node-b300c202-e834-e7c0-ab87-00d3048b2876-048b2848" data-w-id="b300c202-e834-e7c0-ab87-00d3048b2876" class="copyright-flex legal">
-              <p class="paragraph _2">© Nords Oy 2023<br></p>
+              <p class="paragraph _2">© Nords Oy 2024<br></p>
               <div class="legal">
                 <a href="palveluehdot" class="footer-link bigger">Palveluehdot</a>
                 <div class="footer-link bigger">|</div>
