--- a/referenssi/mikura-sushi-oy.html
+++ b/referenssi/mikura-sushi-oy.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat Mar 30 2024 10:53:51 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Apr 14 2024 13:32:15 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65a683dc387d6f72ded6071b" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -59,7 +59,7 @@
             </a>
           </div>
           <div class="nav-wrapper _3">
-            <a href="../referenssit" class="navlinks w-inline-block">
+            <a href="https://www.nords.fi/#Referenssit" class="navlinks w-inline-block">
               <div class="nav-text">Referenssit</div>
               <div class="nav-text text-shadow">Referenssit</div>
             </a>
@@ -81,6 +81,9 @@
             </a>
             <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a026907" href="https://www.youtube.com/@nords." target="_blank" class="social-icon w-inline-block"><img src="../images/youtube.svg" loading="lazy" width="20" alt="Youtube" class="animation-image _3">
               <div class="social-circle twitter"></div>
+            </a>
+            <a data-w-id="f7a4cc83-0293-c6ee-c656-6f89860e195f" href="https://wa.me/358449819623" target="_blank" class="social-icon w-inline-block"><img src="../images/whatsapp_1.svg" loading="lazy" width="20" alt="Youtube" class="animation-image _3">
+              <div class="social-circle whatsapp"></div>
             </a>
           </div>
           <div class="location-wrapper"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44afca597a6f8_gps_fixed_white_24dp.svg" loading="lazy" width="14" alt="" class="location">
@@ -164,7 +167,7 @@
                 </div>
               </div>
               <div id="w-node-_485b5f3a-b728-dec4-f4da-48a0512454f2-512454e1" class="client-card">
-                <a href="../referenssi/suutarilan-autohuoltopiste-oy" class="client-image w-inline-block"><img src="../images/mockup-sahp.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="../images/mockup-sahp.webp 500w, ../images/mockup-sahp.webp 800w, ../images/mockup-sahp.webp 1080w, ../images/mockup-sahp.webp 1600w" alt="Suutarilan Autohuoltopiste verkkosivut" class="client-image"></a>
+                <a href="../referenssi/suutarilan-autohuoltopiste-oy" class="client-image w-inline-block"><img src="../images/mockup-sahp.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="../images/mockup-sahp-p-500.webp 500w, ../images/mockup-sahp-p-800.webp 800w, ../images/mockup-sahp-p-1080.webp 1080w, ../images/mockup-sahp.webp 1600w" alt="Suutarilan Autohuoltopiste verkkosivut" class="client-image"></a>
                 <div class="client-content add-shadow">
                   <div class="category-felx">
                     <a href="../referenssi/suutarilan-autohuoltopiste-oy" class="category-tag">03/2024</a>
@@ -193,7 +196,7 @@
           <div class="top-divider">
             <div class="category-tag _2">Ole meihin yhteydessä!<br></div>
           </div>
-          <h3 class="display-1 larger">Olemme valmiina hommiin!</h3>
+          <h3 class="display-1 larger footer-cta">Olemme valmiina hommiin!</h3>
           <div class="margin-40px">
             <p class="subhead">Luodaan jotain ainutlaatuista.</p>
           </div>
@@ -215,14 +218,14 @@
           <div class="footer-grid">
             <div id="w-node-_063a8163-44a6-b9f6-d883-e512f17c4996-f17c497c"><img src="../images/ndm-cropped.png" loading="lazy" width="70" sizes="(max-width: 479px) 100vw, 140px" alt="Kirjaimet NDM ja nimi Nords Digital Media sen vieressä." srcset="../images/ndm-cropped-p-500.png 500w, ../images/ndm-cropped-p-800.png 800w, ../images/ndm-cropped-p-1080.png 1080w, ../images/ndm-cropped-p-1600.png 1600w, ../images/ndm-cropped-p-2000.png 2000w, ../images/ndm-cropped-p-2600.png 2600w, ../images/ndm-cropped-p-3200.png 3200w" class="logo-footer">
               <div class="margin-30px">
-                <p class="paragraph-footer">Visioi. Luo. Saavuta.</p>
+                <p class="paragraph-footer">Visioi. Luo. <em>Saavuta</em>.</p>
               </div>
               <div class="margin-30px">
                 <div class="navigation-flex">
                   <a href="https://www.nords.fi" class="footer-link bigger">Etusivu</a>
                   <a href="../palvelut" class="footer-link bigger">Palvelut</a>
                   <a href="../hinnasto" class="footer-link bigger">Hinnasto</a>
-                  <a href="../referenssit" class="footer-link bigger">Referenssit</a>
+                  <a href="https://www.nords.fi/#Referenssit" class="footer-link bigger">Referenssit</a>
                   <a href="../ota-yhteytta" class="footer-link bigger">Ota yhteyttä</a>
                 </div>
               </div>
@@ -238,6 +241,9 @@
                   </a>
                   <a data-w-id="063a8163-44a6-b9f6-d883-e512f17c49b6" href="https://www.youtube.com/@nords." target="_blank" class="social-icon w-inline-block"><img src="../images/youtube.svg" loading="lazy" width="20" alt="Youtube" class="animation-image _3">
                     <div class="social-circle twitter"></div>
+                  </a>
+                  <a data-w-id="6cb35788-66f4-8f8f-bb6e-0c71dd961dd5" href="https://wa.me/358449819623" target="_blank" class="social-icon w-inline-block"><img src="../images/whatsapp_1.svg" loading="lazy" width="20" alt="" class="animation-image _3">
+                    <div class="social-circle whatsapp"></div>
                   </a>
                 </div>
               </div>
