Update location information

--- a/ota-yhteytta.html
+++ b/ota-yhteytta.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sun Apr 14 2024 19:05:42 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Apr 14 2024 19:07:59 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65a683dc387d6f72ded60721" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -87,7 +87,7 @@
             </a>
           </div>
           <div class="location-wrapper"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44afca597a6f8_gps_fixed_white_24dp.svg" loading="lazy" width="14" alt="" class="location">
-            <p class="top-text _2">Tampere, Finland</p>
+            <p class="top-text _2">Helsinki, Finland</p>
           </div>
         </div>
       </div>
